replace bold font with span font

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <figcaption></figcaption>
       </figure>
       <section class="summary">
-        <h1>Simple Omelette Recipe</h2>
+        <h1>Simple Omelette Recipe</h1>
         <p>
           An easy and quick dish, perfect for any meal. This classic omelette
           combines beaten eggs cooked to perfection, optionally filled with your
@@ -51,10 +51,10 @@
           <h3>Preparation Time</h3>
           <ul>
             <li>
-              <span><b>Total</b>: Approximately 10 minutes</span>
+              <span class="bold-600">Total:</span> Approximately 10 minutes
             </li>
-            <li><b>Preparation</b>: 5 minutes</li>
-            <li><b>Cooking</b>: 5 minutes</li>
+            <li><span class="bold-600">Preparation:</span> 5 minutes</li>
+            <li><span class="bold-600">Cooking:</span> 5 minutes</li>
           </ul>
         </div>
       </section>
@@ -65,36 +65,63 @@
           <li>Salt, to taste</li>
           <li>Pepper, to taste</li>
           <li>1 tablespoon of butter or oil</li>
-          <li><span>Optional fillings: cheese, diced vegetables, cooked meat, herbs</span></li>
+          <li>
+            Optional fillings: cheese, diced vegetables, cooked meat, herbs
+          </li>
         </ul>
       </section>
       <div class="line"></div>
       <section class="instruction">
         <h1>Instructions</h1>
         <ol>
-          <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-          <li><b>Heat the pan:</b> Place a non-stick frying pan over  medium heat and add butter or oil.</li>
-          <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-          <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slighly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-          <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto the plate.</li>
-          <li><b>Enjoy:
-          </b> Serve hot, with additional salt and pepper if needed.</li>
+          <li>
+            <span class="bold-600">Beat the eggs:</span> In a bowl, beat the
+            eggs with a pinch of salt and pepper until they are well mixed. You
+            can add a tablespoon of water or milk for a fluffier texture.
+          </li>
+          <li>
+            <span class="bold-600">Heat the pan:</span> Place a non-stick frying
+            pan over medium heat and add butter or oil.
+          </li>
+          <li>
+            <span class="bold-600">Cook the omelette:</span> Once the butter is
+            melted and bubbling, pour in the eggs. Tilt the pan to ensure the
+            eggs evenly coat the surface.
+          </li>
+          <li>
+            <span class="bold-600">Add fillings (optional):</span> When the eggs
+            begin to set at the edges but are still slighly runny in the middle,
+            sprinkle your chosen fillings over one half of the omelette.
+          </li>
+          <li>
+            <span class="bold-600">Fold and serve:</span> As the omelette
+            continues to cook, carefully lift one edge and fold it over the
+            fillings. Let it cook for another minute, then slide it onto the
+            plate.
+          </li>
+          <li>
+            <span class="bold-600">Enjoy: </span> Serve hot, with additional
+            salt and pepper if needed.
+          </li>
         </ol>
       </section>
-        <div class="line"></div>
-        <section class="nutrition">
-          <h1>Nutrition</h1>
-          <p>The table below shows nutritional values per serving without the additional fillings.</p>
-          <div class="nutrients">
-            <p>Calories <span class="nutrients-value">277kcal</span></p>
-            <div class="line"></div>
-            <p>Carbs <span class="nutrients-value">0g</span></p>
-            <div class="line"></div>
-            <p>Protein <span class="nutrients-value">20g</span></p>
-            <div class="line"></div>
-            <p>Fat <span class="nutrients-value">22g</span></p>
-          </div>
-        </section>
+      <div class="line"></div>
+      <section class="nutrition">
+        <h1>Nutrition</h1>
+        <p>
+          The table below shows nutritional values per serving without the
+          additional fillings.
+        </p>
+        <div class="nutrients">
+          <p>Calories <span class="nutrients-value bold-700">277kcal</span></p>
+          <div class="line"></div>
+          <p>Carbs <span class="nutrients-value bold-700">0g</span></p>
+          <div class="line"></div>
+          <p>Protein <span class="nutrients-value bold-700">20g</span></p>
+          <div class="line"></div>
+          <p>Fat <span class="nutrients-value bold-700">22g</span></p>
+        </div>
+      </section>
     </main>
 
     <!--     <div class="attribution">
